# multimodal-patch-embeddings

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: _types.py  data.py  loss.py  main.py  model.py  utils.py
src/notebooks/: mm_patch_embed.ipynb  vit_no_cls.ipynb
