[tool.poetry]
name = "multimodal-patch-embeddings"
version = "0.1.0"
description = "An implementation of Multimodal Patch Embeddings"
authors = ["vinsis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
pydantic = "^2.7.1"
ftfy = "^6.2.0"
regex = "^2024.4.16"
tqdm = "^4.66.2"
clip = {git = "https://github.com/openai/CLIP.git"}
notebook = "^7.1.3"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
